added script to loadData
added javascript to load from MongoDB

--- a/index.html
+++ b/index.html
@@ -1,2 +1,22 @@
-Hello, world!
-Brandon
+
+
+<!DOCTYPE html>
+
+
+
+<html>
+<head>
+<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.0.min.js"></script>
+</head>
+<body>
+<script src="loadData.js">
+//document.write(loadData[0]);
+/*var time = new Array();
+for ( var i = 0; i < loadData.length; i++ ) {
+	time.push(Number(loadData[i].timestamp));
+}
+document.write(time[0]);
+*/
+</script>
+</body>
+</html>
