--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.0.min.js"></script>
 </head>
 <body>
-<script src="loadData.js">
-//document.write(loadData[0]);
+<script src="canvasjs-1.3.0/canvasjs.min.js"></script>
+<script src="loadData.js"></script>
+<script>
+
+document.write(procZeroName[0].x);
 /*var time = new Array();
 for ( var i = 0; i < loadData.length; i++ ) {
 	time.push(Number(loadData[i].timestamp));
