Added more graphs, changed graph style

--- a/test.html
+++ b/test.html
@@ -12,5 +12,6 @@
   <div id="cpuLoadContainer" style="height: 300px; width=50%;"> </div>
   <div id="procCountContainer" style="height: 300px; width=50%;"> </div>
   <div id="ramUsedContainer" style="height: 300px; width=50%;"> </div>
+  <div id="diskUsedContainer" style="height: 300px; width=50%;"> </div>
 </body>
 </html>
