--- a/test.html
+++ b/test.html
@@ -4,14 +4,43 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script type="text/javascript" src="canvasjs-1.3.0/canvasjs.min.js"></script>
   <script type="text/javascript" src="loadData.js"></script>
+
+  <style>
+  img.bg {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+  
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+  
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+  }
+  
+  @media screen and (max-width: 1024px){
+  img.bg {
+  left: 50%;
+  margin-left: -512px; }
+  }
+  
+  #page-wrap { position: relative; width: 800px; margin: 50px auto; padding: 20px; background: #E9E9E9; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif; }
+  p { font: 15px/2 Georgia, Serif; margin: 0 0 30px 0; text-indent: 40px; }
+  </style>
 </head>
 <body>
-  <div id="distroVersionDiv"></div>
-  <div id="kernelVersionDiv"></div>
-  <div id="cpuCoreCountDiv"></div>
-  <div id="cpuLoadContainer" style="height: 300px; width=50%;"> </div>
-  <div id="procCountContainer" style="height: 300px; width=50%;"> </div>
-  <div id="ramUsedContainer" style="height: 300px; width=50%;"> </div>
-  <div id="diskUsedContainer" style="height: 300px; width=50%;"> </div>
+  <img src="iceberg.jpg" class="bg">
+  <div id="page-wrap">
+    <div id="distroVersionDiv"></div>
+    <div id="kernelVersionDiv"></div>
+    <div id="cpuCoreCountDiv"></div>
+    <div id="cpuLoadContainer" style="height: 300px; width=50%;"> </div>
+    <div id="procCountContainer" style="height: 300px; width=50%;"> </div>
+    <div id="ramUsedContainer" style="height: 300px; width=50%;"> </div>
+    <div id="diskUsedContainer" style="height: 300px; width=50%;"> </div>
+</div>
 </body>
 </html>
